--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,7 +37,7 @@
         android:layout_alignBottom="@id/imageIcon"
         android:layout_marginStart="-119dp"
         android:layout_marginBottom="-44dp"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:text="User name"
         android:textStyle="italic" />
 
@@ -64,7 +64,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginBottom="-113dp"
         android:text="Họ và tên"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:textStyle="italic" />
 
     <EditText
@@ -87,7 +87,7 @@
         android:layout_alignBottom="@id/UserName"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="-31dp"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:text="Password" />
 
     <EditText
@@ -110,7 +110,7 @@
         android:layout_alignBottom="@id/HoTen"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="-37dp"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:text="Số điện thoại"
         android:textStyle="italic" />
 
@@ -134,7 +134,7 @@
         android:layout_alignBottom="@id/editTextSdt"
         android:layout_marginStart="1dp"
         android:layout_marginBottom="-33dp"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:text="Email" />
 
     <EditText
@@ -158,7 +158,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginBottom="-40dp"
         android:text="Giới tính"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:textStyle="italic" />
 
     <TextView
@@ -170,7 +170,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginBottom="-74dp"
         android:text="Ngày sinh"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:textStyle="italic" />
 
     <EditText
@@ -229,7 +229,7 @@
         android:layout_marginStart="59dp"
         android:layout_marginBottom="-40dp"
         android:text="Bạn đã có tài khoản?"
-        android:textColor="@color/black"
+        android:textColor="#7C7C7C"
         android:textStyle="italic" />
 
     <TextView
