--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -90,9 +95,8 @@
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextPass"
-        android:layout_alignStart="@id/imageNen"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="-64dp"
         android:background="@drawable/round_button"
         android:radius="20dp"
@@ -102,16 +106,35 @@
         android:textSize="14sp"
         android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/btDNGoogle"
+        app:backgroundTint="@null"
+        android:layout_width="331dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/btDN"
+        android:layout_marginTop="85dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bg_btn_google"
+        android:drawableLeft="@drawable/ic_google"
+        android:paddingHorizontal="5dp"
+        android:radius="20dp"
+        android:text="Đăng nhập bằng Google"
+        android:textColor="#000000"
+        android:textAllCaps="false"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/txtQuenPass"
         android:layout_width="150dp"
         android:layout_height="25dp"
-        android:layout_below="@id/btDN"
+        android:layout_below="@id/btDNGoogle"
         android:layout_alignStart="@id/imageNen"
         android:layout_alignTop="@id/btDN"
         android:layout_marginStart="234dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="140dp"
         android:layout_marginRight="39dp"
+        android:layout_centerHorizontal="true"
         android:text="Bạn quên mật khẩu ?"
         android:textSize="16sp"
         android:textStyle="italic" />
@@ -124,7 +147,7 @@
         android:layout_alignStart="@id/imageNen"
         android:layout_alignBottom="@id/btDN"
         android:layout_marginStart="90dp"
-        android:layout_marginBottom="-84dp"
+        android:layout_marginBottom="-150dp"
         android:text="Bạn chưa có tài khoản?"
         android:textSize="16sp"
         android:textColor="#7C7C7C"
@@ -138,9 +161,10 @@
         android:layout_alignStart="@id/imageNen"
         android:layout_alignBottom="@id/btDN"
         android:layout_marginStart="273dp"
-        android:layout_marginBottom="-86dp"
+        android:layout_marginBottom="-150dp"
         android:text="Đăng kí"
         android:textColor="#3CB721"
         android:textSize="16sp"
         android:textStyle="italic" />
 </RelativeLayout>
+</ScrollView>
