--- a/app/src/main/res/layout/activity_datsan.xml
+++ b/app/src/main/res/layout/activity_datsan.xml
@@ -14,7 +14,8 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="Chọn sân"
         android:textAlignment="center"
-        android:textSize="20dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
