--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,9 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -51,8 +49,8 @@
         android:layout_marginStart="1dp"
         android:layout_marginBottom="-49dp"
         android:background="@drawable/edittext_bg"
+        android:hint="ductai09"
         android:padding="4dp"
-        android:hint="AsggtUght"
         android:textStyle="italic" />
 
     <TextView
