--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -28,4 +28,24 @@
         android:fontFamily="serif"
         android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progressBar1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:indeterminateTint="#FF5722"-->
+<!--        android:scaleX="1.5"-->
+<!--        android:scaleY="1.5"-->
+<!--        android:visibility="visible" />-->
+
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/progressBar"
+        style="@style/SpinKitView.ThreeBounce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        app:SpinKit_Color="#FF5722" />
+    </RelativeLayout>
