--- a/app/src/main/res/layout/thongtindatlichkh.xml
+++ b/app/src/main/res/layout/thongtindatlichkh.xml
@@ -6,7 +6,6 @@
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp">
 
-
     <RelativeLayout
         android:id="@+id/relative_toolbar"
         android:layout_width="match_parent"
@@ -32,12 +31,23 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relative_toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="90dp"
+        android:text="Khách hàng: Nguyễn Văn A\nNgày đặt: 14/4/2023"
+        android:textColor="@color/black"
+        android:textSize="20sp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="104dp"
-        android:layout_marginTop="55dp"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:layout_marginTop="185dp">
 
 
         <ImageView
@@ -59,8 +69,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sân bóng 5 ngươi"
-                android:textColor="@color/black"
                 android:textSize="16sp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <TextView
@@ -84,9 +94,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="104dp"
-        android:layout_marginTop="160dp"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:layout_marginTop="280dp">
 
         <ImageView
             android:id="@+id/product_image4"
@@ -100,29 +110,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Coca Cola 225ml"
-            android:textColor="@color/black"
             android:textSize="16sp"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_ttdl_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="-120dp"
-            android:layout_marginTop="20dp"
             android:text="Số lượng: 10"
+            android:textSize="14sp"
             android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="-120dp"/>
 
         <TextView
             android:id="@+id/tv_ttdl_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="-80dp"
-            android:layout_marginTop="40dp"
             android:text="Giá: 120000 VND"
+            android:textSize="14sp"
             android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="-80dp"/>
 
     </LinearLayout>
 
@@ -132,7 +142,7 @@
         android:layout_below="@+id/relative_toolbar"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="290dp"
+        android:layout_marginTop="400dp"
         android:text="Tổng tiền: "
         android:textColor="@color/black"
         android:textSize="16sp" />
@@ -143,27 +153,18 @@
         android:layout_below="@+id/relative_toolbar"
         android:layout_alignParentStart="true"
         android:layout_marginStart="261dp"
-        android:layout_marginTop="290dp"
+        android:layout_marginTop="400dp"
         android:text="720.000VND"
-        android:textColor="#D35400"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textColor="#D35400"/>
 
     <Button
-        android:id="@+id/btnXacNhanDatLich"
-        android:layout_width="115dp"
+        android:layout_width="145dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="145dp"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="650dp"
         android:backgroundTint="#3CB371"
-        android:text="Đặt lịch" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_centerInParent="true"
-        android:visibility="invisible" />
+        android:text="Hoàn thành" />
 
 </androidx.cardview.widget.CardView>
