--- a/app/src/main/res/layout/admin_douong.xml
+++ b/app/src/main/res/layout/admin_douong.xml
@@ -14,10 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_left_arrow"/>
+
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,6 +61,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_admin_douong"
             android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/ln_admin_search">
         </androidx.recyclerview.widget.RecyclerView>
@@ -69,7 +69,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/btn_themDoUong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
