--- a/app/src/main/res/layout/admin_douong_item.xml
+++ b/app/src/main/res/layout/admin_douong_item.xml
@@ -10,6 +10,7 @@
         android:layout_marginTop="8dp">
 
         <ImageView
+            android:id="@+id/imv_admim_douong_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginTop="10dp"
@@ -19,18 +20,18 @@
             android:id="@+id/rl_admin_khachhang_fullname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp">
+            android:layout_marginLeft="8dp">
             <TextView
                 android:id="@+id/tv_admin_douong_name"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="18dp"
                 android:textColor="@color/black"
                 android:text="Pepsi lon 330ml"
                 android:textSize="18dp"/>
 
             <TextView
-                android:id="@+id/tv_admin_douong_sl"
+                android:id="@+id/tv_admin_douong_sl1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SL:  "
@@ -38,24 +39,31 @@
                 android:textColor="@color/black"
                 android:layout_marginTop="7dp"/>
             <TextView
+                android:id="@+id/tv_admin_douong_sl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_admin_douong_name"
-                android:layout_toRightOf="@id/tv_admin_douong_sl"
+                android:layout_toRightOf="@id/tv_admin_douong_sl1"
                 android:layout_marginTop="7dp"
                 android:text="35"
                 android:textColor="#55c63f" />
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/tv_admin_douong_gia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="33dp"
-            android:text="12.000 Đ"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="30dp"
+            android:text="12.000"
             android:textSize="16dp"
-            android:textColor="#ff002a"
-            app:drawableRightCompat="@drawable/ic_right_arrow" />
+            android:textColor="#ff002a" />
+        <ImageView
+            android:layout_width="17dp"
+            android:layout_height="17dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_right_arrow"
+            android:layout_marginTop="34dp"/>
     </LinearLayout>
     <View
         android:id="@+id/divider2"
