--- a/app/src/main/res/layout/admin_khachhang_item.xml
+++ b/app/src/main/res/layout/admin_khachhang_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 <LinearLayout
     android:id="@+id/ln_admin_khachhang"
     android:layout_width="match_parent"
@@ -24,7 +24,7 @@
         android:layout_marginLeft="12dp">
         <TextView
             android:id="@+id/tv_admin_khachhang_fullname"
-            android:layout_width="200dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
@@ -40,15 +40,15 @@
             android:textColor="#55c63f" />
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="33dp"
-        android:text="900.000 Đ"
+    <ImageButton
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
         android:textSize="16dp"
         android:textColor="#ff002a"
-        app:drawableRightCompat="@drawable/ic_right_arrow" />
+        android:backgroundTint="#FFFFFF"
+        android:src="@drawable/ic_right_arrow" />
 </LinearLayout>
     <View
         android:id="@+id/divider2"
