--- a/app/src/main/res/layout/admin_douong.xml
+++ b/app/src/main/res/layout/admin_douong.xml
@@ -27,43 +27,23 @@
                 android:textSize="23dp" />
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/btn_admin_douong_search"
-            android:layout_marginTop="23dp"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_below="@id/ln_admin_douong"
-            android:layout_toRightOf="@id/ln_admin_search"
-            android:backgroundTint="#FFFFFF"
-            android:src="@android:drawable/ic_menu_search" />
-
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:id="@+id/tv_admin_san_timsan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tìm đồ uống:"
-            android:layout_marginTop="35dp"
-            android:textColor="@color/black"
-            android:layout_below="@id/ln_admin_douong"
-            />
-        <EditText
-            android:id="@+id/ln_admin_search"
-            android:layout_width="230dp"
+        <SearchView
+            android:id="@+id/search_admin_douong"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/ln_admin_douong"
-            android:layout_toRightOf="@id/tv_admin_san_timsan"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="12dp"
             android:layout_marginTop="19dp"
-            android:layout_marginRight="3dp"
-            android:hint="Tên đồ uống"
-            android:textSize="16dp" />
+            android:layout_marginRight="10dp"
+            android:queryHint="Tên đồ uống"
+            android:textSize="16dp"
+            android:iconifiedByDefault="false"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_admin_douong"
             android:layout_width="match_parent"
-            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ln_admin_search">
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/search_admin_douong">
         </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
 
