--- a/app/src/main/res/layout/admin_douong_add.xml
+++ b/app/src/main/res/layout/admin_douong_add.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/btn_admin_douong_goback"
+                android:id="@+id/btn_admin_douong_themdouong_goback"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_left_arrow"/>
@@ -31,9 +31,9 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imv_addImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/img_chooser"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginTop="25dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/layout_title"
@@ -43,67 +43,79 @@
             android:id="@+id/tv_tendouong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imv_addImage"
+            android:layout_below="@id/img_chooser"
             android:text="Tên đồ uống"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="35dp"
             android:layout_marginLeft="12dp"/>
         <EditText
-            android:id="@+id/edt_tendouong"
+            android:id="@+id/edt_admin_douong_themdouong_tendouong"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_tendouong"
             android:layout_marginLeft="30dp"
-            android:textSize="15dp"/>
+            android:textSize="18dp"/>
         <TextView
             android:id="@+id/tv_sl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edt_tendouong"
+            android:layout_below="@id/edt_admin_douong_themdouong_tendouong"
             android:text="Số lượng"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="35dp"
             android:layout_marginLeft="12dp"/>
         <EditText
-            android:id="@+id/edt_sl"
+            android:id="@+id/edt_admin_douong_themdouong_sl"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_sl"
             android:layout_marginLeft="30dp"
-            android:textSize="15dp"
-            android:inputType="number"/>
+            android:textSize="18dp"
+            android:inputType="number"
+            android:maxLength="3"/>
         <TextView
             android:id="@+id/tv_gia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edt_sl"
+            android:layout_below="@id/edt_admin_douong_themdouong_sl"
             android:text="Mức giá"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="35dp"
             android:layout_marginLeft="12dp"/>
 
         <EditText
-            android:id="@+id/edt_gia"
+            android:id="@+id/edt_admin_douong_themdouong_gia"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_gia"
             android:layout_marginLeft="30dp"
             android:singleLine="false"
-            android:textSize="15dp" />
+            android:textSize="18dp"
+            android:inputType="number"
+            android:maxLength="6"/>
 
 
         <Button
+            android:id="@+id/btn_admin_douong_themdouong_add"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edt_gia"
-            android:layout_centerInParent="true"
+            android:layout_below="@id/edt_admin_douong_themdouong_gia"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/round_button"
             android:text="Thêm"
+            android:layout_centerHorizontal="true"
             app:backgroundTint="#50C878" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_admin_douong_themdouong"
+            style="?android:attr/progressBarStyle"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 </ScrollView>
