--- a/app/src/main/res/layout/admin_douong_update.xml
+++ b/app/src/main/res/layout/admin_douong_update.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/btn_admin_douong_update_goback"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_left_arrow"/>
@@ -22,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="Thông tin Khách hàng"
+                android:text="Thông tin Đồ Uống"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="23dp" />
@@ -34,10 +35,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/layout_title"
-            android:text="Mã khách hàng"
+            android:text="Mã đồ uống"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="50dp"
             android:layout_marginLeft="12dp"/>
         <EditText
             android:id="@+id/edt_admin_douong_update_id"
@@ -45,16 +46,17 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_idkhachhang"
             android:layout_marginLeft="30dp"
-            android:textSize="15dp"/>
+            android:textSize="18dp"
+            android:enabled="false"/>
         <TextView
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_admin_douong_update_id"
-            android:text="Tên đăng nhập"
+            android:text="Tên đồ uống"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="12dp"/>
         <EditText
             android:id="@+id/edt_admin_douong_update_tendouong"
@@ -62,16 +64,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_username"
             android:layout_marginLeft="30dp"
-            android:textSize="15dp"/>
+            android:textSize="18dp"/>
         <TextView
             android:id="@+id/tv_hoten"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_admin_douong_update_tendouong"
-            android:text="Họ và tên"
+            android:text="Giá tiền"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="12dp"/>
         <EditText
             android:id="@+id/edt_admin_douong_update_giatien"
@@ -79,13 +81,15 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_hoten"
             android:layout_marginLeft="30dp"
-            android:textSize="15dp"/>
+            android:textSize="18dp"
+            android:inputType="number"
+            android:maxLength="5"/>
         <TextView
             android:id="@+id/tv_sdt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_admin_douong_update_giatien"
-            android:text="Số điện thoại"
+            android:text="Số lượng"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:layout_marginTop="30dp"
@@ -96,94 +100,39 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_sdt"
             android:layout_marginLeft="30dp"
-            android:textSize="15dp"/>
-        <TextView
-            android:id="@+id/tv_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/edt_admin_douong_update_sl"
-            android:text="Email"
-            android:textColor="@color/black"
             android:textSize="18dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="12dp"/>
-        <EditText
-            android:id="@+id/edt_email"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_email"
-            android:layout_marginLeft="30dp"
-            android:textSize="15dp"/>
-        <TextView
-            android:id="@+id/tv_gioitinh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/edt_email"
-            android:text="Giới tính"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="12dp"/>
-        <RadioGroup
-            android:id="@+id/radio_gioitinh"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_gioitinh"
-            android:layout_marginLeft="30dp"
-            android:orientation="horizontal">
-            <RadioButton
-                android:id="@+id/radio_nam"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nam"
-                android:textColor="@color/black"
-                android:layout_marginLeft="75dp"/>
-            <RadioButton
-                android:id="@+id/radio_nu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nữ"
-                android:textColor="@color/black"
-                android:layout_marginLeft="60dp"/>
-        </RadioGroup>
-        <TextView
-            android:id="@+id/tv_tuoi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/radio_gioitinh"
-            android:text="Tuổi"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="12dp"/>
-        <EditText
-            android:id="@+id/edt_tuoi"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_tuoi"
-            android:layout_marginLeft="30dp"
-            android:textSize="15dp"/>
+            android:inputType="number"
+            android:maxLength="3"/>
 
         <Button
-            android:id="@+id/btn_capnhat"
+            android:id="@+id/btn_admin_douong_update_capnhat"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edt_tuoi"
-            android:layout_marginTop="40dp"
+            android:layout_below="@id/edt_admin_douong_update_sl"
+            android:layout_marginTop="50dp"
             android:text="Cập nhật"
             app:backgroundTint="#50C878"
             android:layout_marginLeft="35dp"
             android:background="@drawable/round_button"
             android:layout_marginBottom="10dp"/>
         <Button
+            android:id="@+id/btn_admin_douong_update_xoa"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/btn_capnhat"
-            android:layout_below="@id/edt_tuoi"
-            android:layout_marginTop="40dp"
+            android:layout_toRightOf="@id/btn_admin_douong_update_capnhat"
+            android:layout_below="@id/edt_admin_douong_update_sl"
+            android:layout_marginTop="50dp"
             android:text="xóa"
             app:backgroundTint="#FF0000"
             android:background="@drawable/bg_btn_google"
             android:layout_marginLeft="30dp"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar_admin_douong_update"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
     </RelativeLayout>
 </ScrollView>
