--- a/app/src/main/res/layout/admin_khachhang.xml
+++ b/app/src/main/res/layout/admin_khachhang.xml
@@ -22,7 +22,7 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
-               android:text="Khách hàng"
+               android:text="Quản lý Khách hàng"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="23dp" />
