--- a/app/src/main/res/layout/admin_san.xml
+++ b/app/src/main/res/layout/admin_san.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="Sân"
+                android:text="Quản lý Sân"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="23dp" />
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/admin_navigation"
+        app:layout_constraintBottom_toTopOf="@+id/admin_san_navigation"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/admin_navigation"
+        android:id="@+id/admin_san_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
