--- a/app/src/main/res/layout/admin_san_item.xml
+++ b/app/src/main/res/layout/admin_san_item.xml
@@ -10,52 +10,35 @@
         android:layout_marginTop="8dp">
 
         <ImageView
-            android:id="@+id/imv_admim_douong_image"
+            android:id="@+id/imv_admim_san_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/sp_pepsi"
-            android:layout_marginLeft="10dp"/>
+            app:srcCompat="@drawable/san_bong_5" />
+
         <RelativeLayout
             android:id="@+id/rl_admin_khachhang_fullname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp">
             <TextView
-                android:id="@+id/tv_admin_douong_tendouong"
+                android:id="@+id/tv_admin_san_tensan"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="33dp"
                 android:textColor="@color/black"
-                android:text="Pepsi lon 330ml"
-                android:textSize="18dp"/>
-
-            <TextView
-                android:id="@+id/tv_admin_douong_sl1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="SL:  "
-                android:layout_below="@id/tv_admin_douong_tendouong"
-                android:textColor="@color/black"
-                android:layout_marginTop="7dp"/>
-            <TextView
-                android:id="@+id/tv_admin_douong_sl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_admin_douong_tendouong"
-                android:layout_toRightOf="@id/tv_admin_douong_sl1"
-                android:layout_marginTop="7dp"
-                android:text="35"
-                android:textColor="#55c63f" />
+                android:text="Sân bóng 5 người"
+                android:textSize="20dp"/>
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/tv_admin_douong_gia"
+            android:id="@+id/tv_admin_san_gia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="30dp"
-            android:text="12.000"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="33dp"
+            android:text="300.000"
             android:textSize="16dp"
             android:textColor="#ff002a" />
         <ImageView
@@ -63,14 +46,14 @@
             android:layout_height="17dp"
             android:layout_marginLeft="5dp"
             android:src="@drawable/ic_right_arrow"
-            android:layout_marginTop="34dp"/>
+            android:layout_marginTop="40dp"/>
     </LinearLayout>
     <View
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="12dp"
         android:layout_height="3dp"
         android:layout_below="@id/ln_admin_douong"
         android:layout_weight="1"
