--- a/app/src/main/res/layout/khachhang_chonsan.xml
+++ b/app/src/main/res/layout/khachhang_chonsan.xml
@@ -22,35 +22,39 @@
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <SearchView
+        android:id="@+id/searchView_khachhang_chonsan"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        android:padding="5dp"
-        app:layout_constraintTop_toBottomOf="@id/timsan">
-        <EditText
-            android:id="@+id/edt_timsan"
-            android:layout_width="260dp"
-            android:layout_height="43dp"
-            android:inputType="text"
-            app:layout_constraintVertical_bias="0.006"
-            android:layout_marginLeft="30dp"/>
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bg_btn_google"
+        android:backgroundTint="#C5C5C5"
+        android:iconifiedByDefault="false"
+        android:queryHint="Tên sân"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timsan" />
 
-        <Button
-            android:id="@+id/button9"
-            android:layout_width="58dp"
-            android:layout_height="47dp"
-            android:backgroundTint="#3CB371"
-            android:layout_marginLeft="10dp"
-            android:drawableLeft="@drawable/icon_search"
-            android:layout_toRightOf="@id/edt_timsan" />
-        <GridView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/edt_timsan"/>
-    </RelativeLayout>
+
+    <GridView
+        android:id="@+id/gridView_khachhang_chonsan"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:numColumns="2"
+        android:verticalSpacing="25dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/searchView_khachhang_chonsan"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_khachhang_Home"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintHorizontal_bias="0" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_khachhang_Home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
