Tạm xong đặt lịch NOTE: Require Android >=8 (API 26)

--- a/app/src/main/res/layout/activity_daily_calendar.xml
+++ b/app/src/main/res/layout/activity_daily_calendar.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Calendar.DailyCalendarActivity">
+    >
+
+
+
+    <LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,7 +68,7 @@
 
     <Button
         android:id="@+id/btn_khachhang_datlichngay"
-        android:layout_width="220dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/bg_btn_google"
@@ -72,12 +78,38 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:backgroundTint="@color/green" />
+    <TextView
+        android:id="@+id/tv_khachhang_chitietsan_giochoi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:layout_gravity="center_horizontal"/>
 
-    <ListView
-        android:id="@+id/hourListView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
-        android:layout_marginTop="10dp"/>
+        <ListView
+            android:id="@+id/hourListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="5" />
 
+        <Button
+        android:id="@+id/btn_khachhang_chitietsan_themLich"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Xác nhận"
+        android:background="@drawable/bg_btn_google"
+            android:visibility="gone"
+        app:backgroundTint="@color/red"/>
 </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar_khachhang_themlichdatsan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+</RelativeLayout>
